Fixed: ESN-46 Country filter is now aligned

--- a/static/custom/modules/horizontal/directives/main-menu/menu.scss
+++ b/static/custom/modules/horizontal/directives/main-menu/menu.scss
@@ -87,7 +87,7 @@
             .lang--form{
               select{
                 margin: 1rem 0;
-                padding: 0.3rem 1rem;
+                padding: 5px 1rem;
                 border-radius: 0.6rem;
                 border: 0;
                 background:$aquamarine !important;
@@ -105,11 +105,15 @@
                 }
               }
               &:after{
-                content:url(../img/lang-icon.png);
+                content: '';
                 position: absolute;
-                top: 0;
-                padding: 1rem;            
-                right: -3rem;
+                top: 1.1rem;
+                padding: 1rem;
+                width: 2.2rem;
+                height: 2.2rem;
+                right: -2rem;
+                background: url(../img/lang-icon.png);
+                background-size: 2.2rem;
               }
             }
             &:after {
